# mathlex-eval

./: .gitignore  .spi.yml  CHANGELOG.md  Cargo.toml  FIRST-PRINCIPLES.md  NOTICE  Package.swift  README.md  build.rs  thales_mathcore_integration.md
.github/workflows/: ci.yml  release.yml  swift-ci.yml  swift-release.yml
Sources/MathLexEval/: MathLexEval.swift
Sources/MathLexEvalBridge/: bridge.c
Sources/MathLexEvalBridge/include/: SwiftBridgeCore.h  mathlex-eval.h  module.modulemap
Sources/MathLexEvalRust/: mathlex-eval.swift
benches/: benchmarks.rs
docs/superpowers/specs/: 2026-04-12-mathlex-eval-design.md
examples/: basic_eval.rs  broadcasting.rs  complex_numbers.rs  iterator_input.rs
scripts/: build-xcframework.sh
src/: error.rs  lib.rs
src/broadcast/: mod.rs
src/compiler/: compile.rs  fold.rs  fold_tests.rs  ir.rs  mod.rs  validate.rs
src/eval/: functions.rs  handle.rs  input.rs  mod.rs  numeric.rs  scalar.rs
src/ffi/: bridge.rs  mod.rs
swift/Examples/: BasicEval.swift  Broadcasting.swift  StreamingEval.swift
swift/Sources/MathLexEval/: MathLexEval.swift
tests/: broadcast_tests.rs  compile_error_tests.rs  compile_tests.rs  complex_tests.rs  error_tests.rs  eval_tests.rs  proptest_tests.rs
