[package]
name = "mathlex-eval"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Christian C. Berclaz"]
license = "MIT"
description = "Numerical evaluator for mathlex ASTs with broadcasting support"
repository = "https://github.com/ChrisGVE/mathlex-eval"
documentation = "https://docs.rs/mathlex-eval"
homepage = "https://github.com/ChrisGVE/mathlex-eval"
keywords = ["math", "evaluator", "ast", "broadcasting", "numerical"]
categories = ["mathematics", "science"]
readme = "README.md"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
mathlex = "0.3"
num-complex = { version = "0.4", features = ["serde"] }
ndarray = "0.16"
thiserror = "2"
ordered-float = "4"
swift-bridge = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
rayon = { version = "1.10", optional = true }

[features]
default = ["serde"]
ffi = ["swift-bridge"]
serde = ["dep:serde", "dep:serde_json"]
parallel = ["rayon"]

[build-dependencies]
swift-bridge-build = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1.5"
criterion = "0.5"
approx = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
